--- a/сss/styles.css
+++ b/сss/styles.css
@@ -287,6 +287,12 @@ h2 {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+
+/* форма внутри модального окна */
+.modal-form {
+  padding: 40px;
+}
+
 /* //Модально окно  */
 
 /* Секция преимущества */
