--- a/сss/styles.css
+++ b/сss/styles.css
@@ -31,6 +31,7 @@
   --social-footer-bg: rgba(255, 255, 255, 0.1);
 }
 
+/* font-weight:400=normal=regular */
 body {
   font-family: var(--main-font);
   font-weight: 400;
@@ -275,10 +276,6 @@ h2 {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  transition-property: transform;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
   width: 528px;
   height: 581px;
 
@@ -286,11 +283,117 @@ h2 {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button {
+  position: absolute;
 }
 
 /* форма внутри модального окна */
-.modal-form {
+.form b {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--main-dark-color);
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.form {
   padding: 40px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-input {
+  height: 40px;
+  padding: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-input:focus-within {
+  border-color: var(--accent-color);
+}
+
+.form-textarea {
+  height: 120px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-label {
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+  color: var(--second-dark-color);
+  margin-bottom: 4px;
+}
+
+.agreement {
+  display: inline-block;
+  justify-content: center;
+  line-height: 1.71;
+  color: var(--second-dark-color);
+}
+
+.agreement a {
+  display: inline;
+  text-decoration: underline;
+  color: var(--accent-color);
+  line-height: 1.71;
+}
+
+.checkbox {
+  display: block;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+
+.submit-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+  padding: 10px 55px;
+
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+}
+
+.input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.form-field .icon {
+  position: absolute;
+  top: 0;
+  left: 12px;
+  /* transform: translateY(-50%); */
+
+  width: 18px;
+  height: 18px;
+
+  transition: fill 250ms linear;
 }
 
 /* //Модально окно  */
@@ -586,6 +689,7 @@ h2 {
 
 .project-overlay {
   position: absolute;
+  top: 100%;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
@@ -598,7 +702,7 @@ h2 {
 
 .project-link:hover .project-overlay,
 .project-link:focus .project-overlay {
-  transform: translate(0, -100%);
+  transform: translateY(-100%);
 }
 
 /* Постоянные клиенты */
