--- a/сss/styles.css
+++ b/сss/styles.css
@@ -291,10 +291,21 @@ h2 {
 
 .modal-close-button {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  top: 8px;
+  right: 8px;
+  background-color: var(--white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 /* форма внутри модального окна */
-.form b {
+.form h3 {
   font-weight: bold;
   font-size: 20px;
   line-height: 1.15;
@@ -315,18 +326,25 @@ h2 {
 }
 
 .form-input {
+  width: 100%;
   height: 40px;
   padding: 0;
+  padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 
-.form-input:focus-within {
+.form-field:focus-within .input-wrapper .icon {
+  fill: var(--accent-color);
+}
+
+.form-field:focus-within .form-input {
   border-color: var(--accent-color);
 }
 
 .form-textarea {
   height: 120px;
+  /* resize: none; */
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -374,8 +392,8 @@ h2 {
   color: var(--white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-style: none;
   border-radius: 4px;
-  outline: none;
   cursor: pointer;
 }
 
@@ -388,12 +406,12 @@ h2 {
   position: absolute;
   top: 0;
   left: 12px;
-  /* transform: translateY(-50%); */
+  transform: translateY(50%);
 
   width: 18px;
   height: 18px;
 
-  transition: fill 250ms linear;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* //Модально окно  */
