--- a/сss/styles.css
+++ b/сss/styles.css
@@ -345,9 +345,9 @@ h2 {
 .form-textarea {
   height: 120px;
   /* resize: none; */
-  padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  padding: 12px 16px;
 }
 
 .form-label {
@@ -373,18 +373,42 @@ h2 {
 }
 
 .checkbox {
+  position: relative;
   display: block;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   cursor: pointer;
+  padding-left: 36px;
 }
 
-.checkbox-input:checked .custom-checkbox {
-  fill: #2196f3;
+.agreement::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  width: 16px;
+  height: 15px;
+
+  background-image: url(../img/svg/chek-border.svg);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.custom-checkbox {
-  outline: 2px solid #000;
-  fill: red;
+.checkbox input:checked + .agreement::before {
+  background-image: url(../img/svg/icon-check.svg);
+}
+
+/* скрытие дефолтного чекбокса */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0000);
+  overflow: hidden;
 }
 
 .submit-button {
