--- a/сss/styles.css
+++ b/сss/styles.css
@@ -391,8 +391,12 @@ h2 {
   width: 16px;
   height: 15px;
 
-  background-image: url(../img/svg/chek-border.svg);
+  background-image: url(../img/svg/check-border.svg);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox input:focus + .agreement::before {
+  background-image: url(../img/svg/check-border-acc.svg);
 }
 
 .checkbox input:checked + .agreement::before {
@@ -400,15 +404,11 @@ h2 {
 }
 
 /* скрытие дефолтного чекбокса */
-.visually-hidden {
+.modal-checkbox-input {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0000);
-  overflow: hidden;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .submit-button {
