--- a/сss/styles.css
+++ b/сss/styles.css
@@ -302,6 +302,23 @@ h2 {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+  transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button-icon {
+  fill: #000;
+  transition: 250ms fill cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover .modal-close-button-icon,
+.modal-close-button:focus .modal-close-button-icon {
+  fill: var(--accent-color);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  transform: scale(1.2);
 }
 
 /* форма внутри модального окна */
@@ -322,6 +339,7 @@ h2 {
 .form-field {
   display: flex;
   flex-direction: column;
+  justify-content: start;
   margin-bottom: 10px;
 }
 
