--- a/сss/styles.css
+++ b/сss/styles.css
@@ -350,6 +350,7 @@ h2 {
   padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: none;
 }
 
 .form-field:focus-within .input-wrapper .icon {
@@ -366,6 +367,7 @@ h2 {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
+  outline: none;
 }
 
 .form-label {
