--- a/сss/styles.css
+++ b/сss/styles.css
@@ -279,6 +279,8 @@ h2 {
   width: 528px;
   height: 581px;
 
+  padding: 40px;
+
   background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -333,41 +335,8 @@ h2 {
 }
 
 .form {
-  padding: 40px;
-}
-
-.form-field {
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  margin-bottom: 10px;
-}
-
-.form-input {
-  width: 100%;
-  height: 40px;
-  padding: 0;
-  padding-left: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-}
-
-.form-field:focus-within .input-wrapper .icon {
-  fill: var(--accent-color);
-}
-
-.form-field:focus-within .form-input {
-  border-color: var(--accent-color);
-}
-
-.form-textarea {
-  height: 120px;
-  /* resize: none; */
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding: 12px 16px;
-  outline: none;
 }
 
 .form-label {
@@ -375,7 +344,43 @@ h2 {
   line-height: 1.167;
   letter-spacing: 0.01em;
   color: var(--second-dark-color);
-  margin-bottom: 4px;
+
+  margin-bottom: 10px;
+}
+
+.label-textarea {
+  margin-bottom: 20px;
+}
+
+.form-input,
+.form-textarea {
+  display: block;
+  width: 100%;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 0;
+  outline: none;
+}
+
+.form-textarea {
+  height: 120px;
+  /* resize: none; */
+  padding: 12px 16px;
+  margin-top: 4px;
+}
+
+.form-input {
+  padding-left: 40px;
+}
+
+.form-label:focus-within .input-wrapper .modal-icon {
+  fill: var(--accent-color);
+}
+
+.form-label:focus-within .form-input {
+  border-color: var(--accent-color);
 }
 
 .agreement {
@@ -453,9 +458,10 @@ h2 {
 .input-wrapper {
   display: block;
   position: relative;
+  margin-top: 4px;
 }
 
-.form-field .icon {
+.modal-icon {
   position: absolute;
   top: 0;
   left: 12px;
